--- a/expected-gpa.html
+++ b/expected-gpa.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AOU GPA Calculator – Expected GPA Forecast</title>
 
-    <meta name="description" content="Estimate your expected GPA at the end of the semester based on your current GPA, completed credit hours, and this semester's courses.">
+    <meta name="description" content="Estimate your expected GPA at the end of the semester based on your current GPA, completed hours, and expected performance.">
     <meta name="author" content="Homam Shaaban">
     <meta name="robots" content="index, follow">
 
@@ -21,22 +21,22 @@
         .bg-wrapper {
             background: linear-gradient(135deg, rgba(34,193,195,1) 0%, rgba(10,93,150,1) 100%);
             min-height: 100vh;
-            padding: 40px 15px 60px;
+            padding: 40px 15px 70px;
         }
 
         .container {
-            max-width: 800px;
+            max-width: 820px;
             margin: auto;
             background: rgba(0, 32, 63, 0.82);
-            padding: 40px;
+            padding: 40px 45px;
             border-radius: 18px;
-            box-shadow: 0 0 25px rgba(0,0,0,0.35);
+            box-shadow: 0 0 30px rgba(0,0,0,0.35);
             position: relative;
         }
 
         .logo-container {
             text-align: center;
-            margin-bottom: 10px;
+            margin-bottom: 12px;
         }
         .logo-container img {
             width: 155px;
@@ -44,36 +44,52 @@
 
         h1 {
             text-align: center;
-            font-size: 2.3em;
+            font-size: 2.4em;
             margin-bottom: 10px;
         }
 
         .subtitle {
             text-align: center;
             opacity: 0.85;
-            margin-bottom: 20px;
+            margin-bottom: 22px;
+            font-size: 1.05em;
         }
 
         input, select, button {
             width: 100%;
-            padding: 11px;
+            padding: 12px;
             font-size: 1em;
             border-radius: 8px;
             border: 2px solid rgba(255,255,255,0.7);
             background: rgba(255,255,255,0.18);
             color: #ffffff;
             margin-bottom: 15px;
+            box-sizing: border-box;
         }
 
-        /* --- Select style --- */
+        /* Remove number arrows */
+        input[type=number]::-webkit-inner-spin-button,
+        input[type=number]::-webkit-outer-spin-button {
+            -webkit-appearance: none;
+        }
+        input[type=number] {
+            -moz-appearance: textfield;
+        }
+
+        /* Remove blue outline */
+        input:focus, select:focus, button:focus {
+            outline: none !important;
+            box-shadow: 0 0 0 2px rgba(255,255,255,0.45);
+            border-color: rgba(255,255,255,0.9);
+        }
+
+        /* Select styling */
         select {
             appearance: none;
-            -webkit-appearance: none;
-            -moz-appearance: none;
-            cursor: pointer;
             background-image: url("data:image/svg+xml;utf8,<svg fill='white' height='14' viewBox='0 0 20 20' width='14' xmlns='http://www.w3.org/2000/svg'><path d='M5.516 7.548a.625.625 0 0 1 .884 0L10 11.156l3.6-3.608a.625.625 0 1 1 .884.884l-4.042 4.05a.625.625 0 0 1-.884 0L5.516 8.432a.625.625 0 0 1 0-.884z'/></svg>");
             background-repeat: no-repeat;
-            background-position: right 12px center;
+            background-position: right 14px center;
+            cursor: pointer;
         }
 
         option {
@@ -88,7 +104,13 @@
             cursor: pointer;
         }
         button:hover {
-            background: #ffcc33;
+            background: #ffcf3a;
+        }
+
+        /* Disabled fields */
+        input:disabled, select:disabled {
+            opacity: 0.45;
+            cursor: not-allowed;
         }
 
         .back-home {
@@ -97,7 +119,7 @@
             left: 15px;
             padding: 7px 13px;
             border-radius: 8px;
-            border: 2px solid rgba(255,255,255,0.7);
+            border: 2px solid rgba(255,255,255,0.75);
             background: transparent;
             color: #ffffff;
             font-size: 0.9em;
@@ -107,64 +129,61 @@
         .expected-section {
             padding: 20px;
             border-radius: 14px;
-            background: rgba(0,0,0,0.18);
+            background: rgba(255,255,255,0.06);
             border: 1px solid rgba(255,255,255,0.25);
-            margin-bottom: 20px;
+            margin-bottom: 25px;
         }
 
         .expected-grid {
             display: grid;
             grid-template-columns: repeat(2,1fr);
-            gap: 15px;
-        }
-
-        .expected-actions {
-            text-align: center;
-            margin-top: 10px;
+            gap: 18px;
         }
 
         .expected-result {
             text-align: center;
-            font-size: 1.3em;
-            margin-top: 12px;
+            font-size: 1.25em;
+            margin-top: 14px;
         }
 
         #expected-error {
             display: none;
             margin-top: 10px;
             padding: 10px;
-            background: rgba(255,0,0,0.20);
-            border: 1px solid rgba(255,120,120,0.9);
-            border-radius: 8px;
-            color: #ffd1d1;
+            border-radius: 10px;
+            background: rgba(255,0,0,0.2);
+            border: 1px solid rgba(255,140,140,0.95);
+            color: #ffd5d5;
         }
 
-        /* HOW TO USE + ABOUT */
         .instructions, .about {
-            margin-top: 25px;
-            border-top: 1px solid rgba(255,255,255,0.3);
-            padding-top: 15px;
-            font-size: 0.95em;
+            margin-top: 28px;
+            border-top: 1px solid rgba(255,255,255,0.28);
+            padding-top: 18px;
+            font-size: 0.98em;
         }
 
         footer {
-            margin-top: 25px;
+            margin-top: 28px;
             text-align: center;
-            font-size: 0.85em;
+            font-size: 0.88em;
             opacity: 0.85;
         }
         footer a {
             color: #ffd966;
-            text-decoration: none;
         }
 
         @media(max-width:600px) {
             .expected-grid {
                 grid-template-columns: 1fr;
             }
+            .container {
+                padding: 28px;
+            }
         }
     </style>
 </head>
+
 <body>
 
 <div class="logo-container">
@@ -177,7 +196,7 @@
 <button class="back-home" onclick="location.href='index.html'">← Home</button>
 
 <h1>Expected GPA Forecast</h1>
-<p class="subtitle">Estimate your expected GPA at the end of this semester.</p>
+<p class="subtitle">Estimate your final GPA based on your performance this semester.</p>
 
 <!-- ================= EXPECTED GPA SECTION ================= -->
 <div class="expected-section">
@@ -218,9 +237,7 @@
 
     </div>
 
-    <div class="expected-actions">
-        <button onclick="calculateExpectedGPA()">Calculate Expected GPA</button>
-    </div>
+    <button onclick="calculateExpectedGPA()">Calculate Expected GPA</button>
 
     <div id="expected-error"></div>
 
@@ -230,25 +247,25 @@
     </div>
 </div>
 
-<!-- ================= HOW TO USE (EN + AR) ================= -->
+<!-- ================= HOW TO USE ================= -->
 <div class="instructions">
     <h2 style="text-align:center;">How to Use</h2>
     <ul style="list-style-position: inside;">
-        <li><strong>Completed Hours:</strong> Enter how many credit hours you have finished so far.</li>
-        <li><strong>Current GPA:</strong> Enter your official cumulative GPA (0–4 scale).</li>
-        <li><strong>This Semester Hours:</strong> Enter the number of credit hours you are registered for.</li>
-        <li><strong>Expected Input:</strong> Choose between entering expected GPA or expected grade (0–100).</li>
-        <li><strong>Calculate:</strong> Click on “Calculate Expected GPA” to see your predicted final GPA.</li>
+        <li><strong>Completed Hours:</strong> Enter all credit hours you have already finished.</li>
+        <li><strong>Current GPA:</strong> Enter your official GPA (0–4 scale).</li>
+        <li><strong>This Semester Hours:</strong> Enter how many credit hours you are taking now.</li>
+        <li><strong>Choose Mode:</strong> Select expected GPA or expected grade (0–100).</li>
+        <li><strong>Calculate:</strong> Press the button to see your predicted final GPA.</li>
     </ul>
 
     <div dir="rtl" style="margin-top:15px;">
         <h2 style="text-align:center;">كيفية الاستخدام</h2>
         <ul style="list-style-position: inside;">
-            <li><strong>عدد الساعات المنجزة:</strong> أدخل مجموع الساعات التي أتممتها حتى الآن.</li>
-            <li><strong>المعدل التراكمي الحالي:</strong> أدخل معدلك الرسمي الحالي من 4.</li>
-            <li><strong>ساعات هذا الفصل:</strong> أدخل عدد الساعات المسجلة خلال الفصل.</li>
-            <li><strong>طريقة الإدخال:</strong> اختر إذا كنت تريد إدخال المعدل المتوقع أو الدرجة المتوقعة.</li>
-            <li><strong>الحساب:</strong> اضغط على “Calculate Expected GPA” لمعرفة معدلك المتوقع.</li>
+            <li><strong>عدد الساعات المنجزة:</strong> أدخل مجموع الساعات التي أنهيتها.</li>
+            <li><strong>المعدل الحالي:</strong> أدخل معدلك الرسمي من 4.</li>
+            <li><strong>ساعات هذا الفصل:</strong> أدخل عدد الساعات المسجلة حالياً.</li>
+            <li><strong>طريقة الإدخال:</strong> اختر إما المعدل المتوقع أو الدرجة المتوقعة.</li>
+            <li><strong>احسب:</strong> اضغط الزر لعرض المعدل المتوقع بنهاية الفصل.</li>
         </ul>
     </div>
 </div>
@@ -257,21 +274,21 @@
 <div class="about">
     <h2 style="text-align:center;">About This Tool</h2>
     <p>
-        The Expected GPA Forecast module is part of the AOU GPA Calculator project.
-        It helps students estimate their final cumulative GPA based on completed credits,
-        current GPA, and expected performance in the current semester.
+        This Expected GPA module is part of the AOU GPA Calculator project.
+        It helps students forecast their cumulative GPA using the 4.0 scale based on:
+        completed hours, current GPA, and expected semester performance.
     </p>
     <p>
-        This tool is for academic guidance only and does not replace the official GPA system used by the university.
+        This tool is for academic guidance only and does not replace official university records.
     </p>
 
     <div dir="rtl" style="margin-top:15px;">
         <p>
-            تم إنشاء هذه الأداة لمساعدة طلاب الجامعة العربية المفتوحة في توقع معدلهم التراكمي
-            بنهاية الفصل بناءً على الساعات المنجزة، والمعدل الحالي، والأداء المتوقع خلال الفصل.
+            تم تطوير هذه الأداة كجزء من مشروع حاسبة المعدل لجامعة العربية المفتوحة.
+            تساعد الطلاب في توقع معدلهم النهائي بناءً على الساعات المنجزة والمعدل الحالي والأداء المتوقع.
         </p>
         <p>
-            الأداة مخصصة لأغراض إرشادية فقط ولا تغني عن النظام الرسمي المستخدم في حساب المعدل.
+            هذه الأداة لغرض الإرشاد فقط ولا تُعتبر بديلاً عن النظام الرسمي لحساب المعدل في الجامعة.
         </p>
     </div>
 </div>
@@ -306,7 +323,6 @@ function onExpectedModeChange() {
     const mode = document.getElementById("expectedMode").value;
     document.getElementById("expectedSemesterGpa").disabled = (mode !== "gpa");
     document.getElementById("expectedSemesterGrade").disabled = (mode !== "grade");
-
     if (mode === "gpa") document.getElementById("expectedSemesterGrade").value = "";
     else document.getElementById("expectedSemesterGpa").value = "";
 }
@@ -339,7 +355,7 @@ function calculateExpectedGPA() {
 
     if (mode === "gpa") {
         const sgpa = Number(document.getElementById("expectedSemesterGpa").value);
-        if (isNaN(sgpa) || sgpa < 0 || sgpa > 4) return showError("Invalid expected semester GPA.");
+        if (isNaN(sgpa) || sgpa < 0 || sgpa > 4) return showError("Invalid expected GPA.");
         newSemesterGpa = sgpa;
     } else {
         const grade = Number(document.getElementById("expectedSemesterGrade").value);
@@ -349,8 +365,8 @@ function calculateExpectedGPA() {
 
     const oldPoints = completed * currentGpa;
     const newPoints = newHours * newSemesterGpa;
-    const expected = (oldPoints + newPoints) / (completed + newHours);
 
+    const expected = (oldPoints + newPoints) / (completed + newHours);
     const finalGpa = expected.toFixed(2);
 
     document.getElementById("expected-gpa-value").textContent = finalGpa;
