--- a/expected-gpa.html
+++ b/expected-gpa.html
@@ -28,7 +28,7 @@
             max-width: 820px;
             margin: auto;
             background: rgba(0, 32, 63, 0.82);
-            padding: 40px 45px;
+            padding: 32px 36px 40px;
             border-radius: 18px;
             box-shadow: 0 0 30px rgba(0,0,0,0.35);
             position: relative;
@@ -42,17 +42,53 @@
             width: 155px;
         }
 
+        /* شريط الهوم في أعلى الكارد */
+        .top-bar {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 12px;
+        }
+
+        .back-home {
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+            padding: 5px 14px;
+            border-radius: 999px;
+            border: 1.5px solid rgba(255,255,255,0.75);
+            background: rgba(255,255,255,0.06);
+            color: #ffffff;
+            font-size: 0.9em;
+            cursor: pointer;
+            backdrop-filter: blur(4px);
+            text-decoration: none;
+        }
+
+        .back-home span {
+            font-size: 1.05em;
+        }
+
+        .back-home:hover {
+            background: rgba(255,255,255,0.13);
+        }
+
+        .back-home:focus,
+        .back-home:focus-visible {
+            outline: none;
+            box-shadow: none;
+        }
+
         h1 {
             text-align: center;
             font-size: 2.4em;
-            margin-bottom: 10px;
+            margin-bottom: 8px;
         }
 
         .subtitle {
             text-align: center;
             opacity: 0.85;
             margin-bottom: 22px;
-            font-size: 1.05em;
+            font-size: 1.02em;
         }
 
         input, select, button {
@@ -76,16 +112,18 @@
             -moz-appearance: textfield;
         }
 
-        /* Remove blue outline */
+        /* Remove blue outline for all controls */
         input:focus, select:focus, button:focus {
-            outline: none !important;
-            box-shadow: 0 0 0 2px rgba(255,255,255,0.45);
+            outline: none;
+            box-shadow: 0 0 0 2px rgba(255,255,255,0.35);
             border-color: rgba(255,255,255,0.9);
         }
 
         /* Select styling */
         select {
             appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
             background-image: url("data:image/svg+xml;utf8,<svg fill='white' height='14' viewBox='0 0 20 20' width='14' xmlns='http://www.w3.org/2000/svg'><path d='M5.516 7.548a.625.625 0 0 1 .884 0L10 11.156l3.6-3.608a.625.625 0 1 1 .884.884l-4.042 4.05a.625.625 0 0 1-.884 0L5.516 8.432a.625.625 0 0 1 0-.884z'/></svg>");
             background-repeat: no-repeat;
             background-position: right 14px center;
@@ -107,23 +145,10 @@
             background: #ffcf3a;
         }
 
-        /* Disabled fields */
+        /* Disabled inputs */
         input:disabled, select:disabled {
             opacity: 0.45;
             cursor: not-allowed;
-        }
-
-        .back-home {
-            position: absolute;
-            top: 15px;
-            left: 15px;
-            padding: 7px 13px;
-            border-radius: 8px;
-            border: 2px solid rgba(255,255,255,0.75);
-            background: transparent;
-            color: #ffffff;
-            font-size: 0.9em;
-            cursor: pointer;
         }
 
         .expected-section {
@@ -178,7 +203,7 @@
                 grid-template-columns: 1fr;
             }
             .container {
-                padding: 28px;
+                padding: 24px 20px 30px;
             }
         }
     </style>
@@ -193,109 +218,115 @@
 <div class="bg-wrapper">
 <div class="container">
 
-<button class="back-home" onclick="location.href='index.html'">← Home</button>
-
-<h1>Expected GPA Forecast</h1>
-<p class="subtitle">Estimate your final GPA based on your performance this semester.</p>
-
-<!-- ================= EXPECTED GPA SECTION ================= -->
-<div class="expected-section">
-    <div class="expected-grid">
-
-        <div>
-            <label>Total completed credit hours</label>
-            <input type="number" id="completedHours" min="0" placeholder="e.g., 60">
-        </div>
-
-        <div>
-            <label>Current cumulative GPA (0–4)</label>
-            <input type="number" id="currentGpa" min="0" max="4" step="0.01" placeholder="e.g., 2.75">
-        </div>
-
-        <div>
-            <label>Credit hours this semester</label>
-            <input type="number" id="newSemesterHours" min="1" placeholder="e.g., 15">
-        </div>
-
-        <div>
-            <label>Input type for this semester</label>
-            <select id="expectedMode" onchange="onExpectedModeChange()">
-                <option value="gpa">Expected semester GPA (0–4)</option>
-                <option value="grade">Expected average grade (0–100)</option>
-            </select>
-        </div>
-
-        <div>
-            <label>Expected semester GPA (0–4)</label>
-            <input type="number" id="expectedSemesterGpa" min="0" max="4" step="0.01" placeholder="e.g., 3.20">
-        </div>
-
-        <div>
-            <label>Expected average grade (0–100)</label>
-            <input type="number" id="expectedSemesterGrade" min="0" max="100" placeholder="e.g., 85">
-        </div>
-
+    <div class="top-bar">
+        <button class="back-home" onclick="location.href='index.html'">
+            <span>←</span>
+            <span>Home</span>
+        </button>
     </div>
 
-    <button onclick="calculateExpectedGPA()">Calculate Expected GPA</button>
+    <h1>Expected GPA Forecast</h1>
+    <p class="subtitle">Estimate your final GPA based on your performance this semester.</p>
 
-    <div id="expected-error"></div>
+    <!-- ================= EXPECTED GPA SECTION ================= -->
+    <div class="expected-section">
+        <div class="expected-grid">
 
-    <div class="expected-result">
-        Expected GPA: <span id="expected-gpa-value">–</span>
-        <span id="expected-merit"></span>
+            <div>
+                <label>Total completed credit hours</label>
+                <input type="number" id="completedHours" min="0" placeholder="e.g., 60">
+            </div>
+
+            <div>
+                <label>Current cumulative GPA (0–4)</label>
+                <input type="number" id="currentGpa" min="0" max="4" step="0.01" placeholder="e.g., 2.75">
+            </div>
+
+            <div>
+                <label>Credit hours this semester</label>
+                <input type="number" id="newSemesterHours" min="1" placeholder="e.g., 15">
+            </div>
+
+            <div>
+                <label>Input type for this semester</label>
+                <select id="expectedMode" onchange="onExpectedModeChange()">
+                    <option value="gpa">Expected semester GPA (0–4)</option>
+                    <option value="grade">Expected average grade (0–100)</option>
+                </select>
+            </div>
+
+            <div>
+                <label>Expected semester GPA (0–4)</label>
+                <input type="number" id="expectedSemesterGpa" min="0" max="4" step="0.01" placeholder="e.g., 3.20">
+            </div>
+
+            <div>
+                <label>Expected average grade (0–100)</label>
+                <input type="number" id="expectedSemesterGrade" min="0" max="100" placeholder="e.g., 85">
+            </div>
+
+        </div>
+
+        <button onclick="calculateExpectedGPA()">Calculate Expected GPA</button>
+
+        <div id="expected-error"></div>
+
+        <div class="expected-result">
+            Expected GPA: <span id="expected-gpa-value">–</span>
+            <span id="expected-merit"></span>
+        </div>
     </div>
-</div>
 
-<!-- ================= HOW TO USE ================= -->
-<div class="instructions">
-    <h2 style="text-align:center;">How to Use</h2>
-    <ul style="list-style-position: inside;">
-        <li><strong>Completed Hours:</strong> Enter all credit hours you have already finished.</li>
-        <li><strong>Current GPA:</strong> Enter your official GPA (0–4 scale).</li>
-        <li><strong>This Semester Hours:</strong> Enter how many credit hours you are taking now.</li>
-        <li><strong>Choose Mode:</strong> Select expected GPA or expected grade (0–100).</li>
-        <li><strong>Calculate:</strong> Press the button to see your predicted final GPA.</li>
-    </ul>
-
-    <div dir="rtl" style="margin-top:15px;">
-        <h2 style="text-align:center;">كيفية الاستخدام</h2>
+    <!-- ================= HOW TO USE ================= -->
+    <div class="instructions">
+        <h2 style="text-align:center;">How to Use</h2>
         <ul style="list-style-position: inside;">
-            <li><strong>عدد الساعات المنجزة:</strong> أدخل مجموع الساعات التي أنهيتها.</li>
-            <li><strong>المعدل الحالي:</strong> أدخل معدلك الرسمي من 4.</li>
-            <li><strong>ساعات هذا الفصل:</strong> أدخل عدد الساعات المسجلة حالياً.</li>
-            <li><strong>طريقة الإدخال:</strong> اختر إما المعدل المتوقع أو الدرجة المتوقعة.</li>
-            <li><strong>احسب:</strong> اضغط الزر لعرض المعدل المتوقع بنهاية الفصل.</li>
+            <li><strong>Completed Hours:</strong> Enter all credit hours you have already finished.</li>
+            <li><strong>Current GPA:</strong> Enter your official GPA (0–4 scale).</li>
+            <li><strong>This Semester Hours:</strong> Enter how many credit hours you are taking now.</li>
+            <li><strong>Choose Mode:</strong> Select expected GPA or expected grade (0–100).</li>
+            <li><strong>Calculate:</strong> Press the button to see your predicted final GPA.</li>
         </ul>
+
+        <div dir="rtl" style="margin-top:15px;">
+            <h2 style="text-align:center;">كيفية الاستخدام</h2>
+            <ul style="list-style-position: inside;">
+                <li><strong>عدد الساعات المنجزة:</strong> أدخل مجموع الساعات التي أنهيتها.</li>
+                <li><strong>المعدل الحالي:</strong> أدخل معدلك الرسمي من 4.</li>
+                <li><strong>ساعات هذا الفصل:</strong> أدخل عدد الساعات المسجلة حالياً.</li>
+                <li><strong>طريقة الإدخال:</strong> اختر إما المعدل المتوقع أو الدرجة المتوقعة.</li>
+                <li><strong>احسب:</strong> اضغط الزر لعرض المعدل المتوقع بنهاية الفصل.</li>
+            </ul>
+        </div>
     </div>
-</div>
 
-<!-- ================= ABOUT THIS TOOL ================= -->
-<div class="about">
-    <h2 style="text-align:center;">About This Tool</h2>
-    <p>
-        This Expected GPA module is part of the AOU GPA Calculator project.
-        It helps students forecast their cumulative GPA using the 4.0 scale based on:
-        completed hours, current GPA, and expected semester performance.
-    </p>
-    <p>
-        This tool is for academic guidance only and does not replace official university records.
-    </p>
-
-    <div dir="rtl" style="margin-top:15px;">
+    <!-- ================= ABOUT THIS TOOL ================= -->
+    <div class="about">
+        <h2 style="text-align:center;">About This Tool</h2>
         <p>
-            تم تطوير هذه الأداة كجزء من مشروع حاسبة المعدل لجامعة العربية المفتوحة.
-            تساعد الطلاب في توقع معدلهم النهائي بناءً على الساعات المنجزة والمعدل الحالي والأداء المتوقع.
+            This Expected GPA module is part of the AOU GPA Calculator project.
+            It helps students forecast their cumulative GPA on the 4.0 scale using
+            completed hours, current GPA, and expected semester performance.
         </p>
         <p>
-            هذه الأداة لغرض الإرشاد فقط ولا تُعتبر بديلاً عن النظام الرسمي لحساب المعدل في الجامعة.
+            This tool is for academic guidance only and does not replace official university records.
         </p>
-    </div>
-</div>
 
-<footer>
-    © 2025 – AOU GPA Calculator. Developed by Homam Shaaban.
-</footer>
+        <div dir="rtl" style="margin-top:15px;">
+            <p>
+                تم تطوير هذه الأداة كجزء من مشروع حاسبة المعدل لجامعة العربية المفتوحة،
+                لمساعدة الطلاب في توقع معدلهم التراكمي النهائي بناءً على الساعات المنجزة
+                والمعدل الحالي والأداء المتوقع في هذا الفصل.
+            </p>
+            <p>
+                الأداة مخصصة للإرشاد فقط ولا تُعتبر بديلاً عن السجلات الرسمية في الجامعة.
+            </p>
+        </div>
+    </div>
+
+    <footer>
+        © 2025 – AOU GPA Calculator. Developed by Homam Shaaban.
+    </footer>
 
 </div>
 </div>
@@ -321,10 +352,13 @@ function getMerit(g) {
 
 function onExpectedModeChange() {
     const mode = document.getElementById("expectedMode").value;
-    document.getElementById("expectedSemesterGpa").disabled = (mode !== "gpa");
+    document.getElementById("expectedSemesterGpa").disabled   = (mode !== "gpa");
     document.getElementById("expectedSemesterGrade").disabled = (mode !== "grade");
-    if (mode === "gpa") document.getElementById("expectedSemesterGrade").value = "";
-    else document.getElementById("expectedSemesterGpa").value = "";
+    if (mode === "gpa") {
+        document.getElementById("expectedSemesterGrade").value = "";
+    } else {
+        document.getElementById("expectedSemesterGpa").value = "";
+    }
 }
 
 function showError(msg) {
@@ -342,10 +376,10 @@ function clearError() {
 function calculateExpectedGPA() {
     clearError();
 
-    const completed = Number(document.getElementById("completedHours").value);
+    const completed  = Number(document.getElementById("completedHours").value);
     const currentGpa = Number(document.getElementById("currentGpa").value);
-    const newHours = Number(document.getElementById("newSemesterHours").value);
-    const mode = document.getElementById("expectedMode").value;
+    const newHours   = Number(document.getElementById("newSemesterHours").value);
+    const mode       = document.getElementById("expectedMode").value;
 
     if (isNaN(completed) || completed < 0) return showError("Invalid completed hours.");
     if (isNaN(currentGpa) || currentGpa < 0 || currentGpa > 4) return showError("Invalid current GPA.");
